--- a/Baha'i/Others/ROB/V2/p469-476Index.html
+++ b/Baha'i/Others/ROB/V2/p469-476Index.html
@@ -108,7 +108,7 @@
 	   <i>Súriy-i-Mulúk</i> (Súrih of the Kings), <a href="../V2/p301-336Ch15.html">ch. 15</a>; <a href= "../V2/p337-369Ch16.html#p337">337</a>, <a href= "../V2/p397-421Ch19.html#p418">418</a>; quoted, <a href= "../V2/p055-064Ch03.html#p56">56</a>, <a href= "../V2/p055-064Ch03.html#p62">62</a>, <a href= "../V2/p301-336Ch15.html#p301">301</a>, <a href="../V2/p301-336Ch15.html">ch. 15</a> <i>passim</i><br>
 	   <i>Súriy-i-Qalam</i>, <a href= "../V2/p397-421Ch19.html#p397">397</a><br>
 	   <i>Súriy-i-Qamís</i>, <a href= "../V2/p397-421Ch19.html#p397">397</a><br>
-	   <i>Súriy-i-Ra'ís</i>, <a href= "../V2/p397-421Ch19.html#p411">411</a>-17; quoted, <a href= "../V2/p397-421Ch19.html#p414">414</a>, <a href= "../V2/p397-421Ch19.html#p415">415</a><br>
+	   <a name="Súriy-i-Ra'ís"></a><i>Súriy-i-Ra'ís</i>, <a href= "../V2/p397-421Ch19.html#p411">411</a>-17; quoted, <a href= "../V2/p397-421Ch19.html#p414">414</a>, <a href= "../V2/p397-421Ch19.html#p415">415</a><br>
 	   <br>
 	   <i>Tablet of Ahmad</i> (Arabic), <a href="../V2/p107-136Ch05.html">ch. 5</a>, <a href= "../V2/p107-136Ch05.html#p116">116</a>, <a href= "../V2/p107-136Ch05.html#p119">119</a>-20; quoted, <a href= "../V2/p107-136Ch05.html#p123">123</a>, <a href= "../V2/p107-136Ch05.html#p126">126</a><br>
 	   <i>Tablet of Ihtiráq</i> (Fire Tablet), <a href= "../V2/p270-282Ch12.html#p275">275</a> and n<br>
