--- a/Baha'i/Others/ROB/V2/p236-269Ch11.html
+++ b/Baha'i/Others/ROB/V2/p236-269Ch11.html
@@ -109,7 +109,8 @@ p261 footnote: should list of tablets revealed for Khalíl also include Gleaning
 	   4. Bahá'u'lláh, <i>Gleanings from the Writings of Bahá'u'lláh</i>, section <a href="../../../Baha/GL/p003-346.html#XXXIX">xxxix</a>.<p>
 	   <hr>
 	   [pilgrimage] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para32">&para;32</a><p>
-	   [Súriy-i-Hajj] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para172">p. 171</a>
+	   [Súriy-i-Hajj] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para172">p. 171</a><p>
+	   [Tablet of Visitation to Baghdád House of Bahá'u'lláh] <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para207">LVII</a>
 	   </small></td>
 </tr>
 </table>
