--- a/Baha'i/Others/ROB/V1/p105-152Ch09.html
+++ b/Baha'i/Others/ROB/V1/p105-152Ch09.html
@@ -402,7 +402,7 @@
        <td VALIGN=top><small><center><a name="p125">125</a></center><p>
 	   <hr>
 	   <hr>
-	   [Lawh-i-Áyiy-i-Núr] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para112">p. 140</a>
+	   [Lawh-i-Húríyyih] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para112">p. 140</a>
 	   </small></td>
 </tr>
 <tr>
