--- a/Baha'i/Others/DBNN/p001-018Ch01.html
+++ b/Baha'i/Others/DBNN/p001-018Ch01.html
@@ -147,11 +147,11 @@
 	</td>
 	<td VALIGN=top rowspan="2"><small>
 	<a name="f12"></a><a href="p001-018Ch01-footnotes.html#f12">12.</a>	"God is Most Great."  <p>
-	<a name="f13"></a><a href="p001-018Ch01-footnotes.html#f13">13.</a>	October 20, 1819 A.D.  <p>
-	<a name="f14"></a><a href="p001-018Ch01-footnotes.html#f14">14.</a>	November 12, 1817 A.D.  <p>
+	<a name="f13"></a><a href="p001-018Ch01-footnotes.html#f13">13.</a>	October 20, 1819 A.D.<sup>*</sup>  <p>
+	<a name="f14"></a><a href="p001-018Ch01-footnotes.html#f14">14.</a>	November 12, 1817 A.D.<sup>*</sup>  <p>
 	<a name="f15"></a><a href="p001-018Ch01-footnotes.html#f15">15.</a>	1857–8 A.D.
 	<hr>
-	[Festivals of the Twin Birthdays] "...will now be observed on the first and the second day following the occurrence of the eighth new moon after <span style="background-color: #ffffCC" TITLE="'New Day.' Name applied to the Bahá'í New Year's Day; according to the Persian calendar, the day on which the sun enters Aries">Naw-Rúz</span>." <a href="../../UHJ/Messages/10July2014TotheBahaisoftheWorld.xhtml">UHJ</a><p>
+	* [Festivals of the Twin Birthdays] "...will now be observed on the first and the second day following the occurrence of the eighth new moon after <span style="background-color: #ffffCC" TITLE="'New Day.' Name applied to the Bahá'í New Year's Day; according to the Persian calendar, the day on which the sun enters Aries">Naw-Rúz</span>." <a href="../../UHJ/Messages/10July2014TotheBahaisoftheWorld.xhtml">UHJ</a><p>
 	["O Son of Being!..."] <i>The Hidden Words of Bahá'u'lláh</i>, <a href="../../Baha/HiddenWords.html#arabic59">Arabic #59</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 2, <a href="../ROB/V2/p194-221Ch09.html#p216">p. 216</a>, vol. 4, <a href="../ROB/V4/p050-072Ch04.html#p68">p. 68</a></b><p>
 	["O Son of Earth!..."] <i>The Hidden Words of Bahá'u'lláh</i>, <a href="../../Baha/HiddenWords.html#persian31">Persian #31</a>
 	</small></td>
@@ -174,7 +174,7 @@
 	During those days when Shaykh Ahmad was preparing to depart from Yazd, Siyyid Kázim-i-Rashtí, <sup><small>16</small></sup> that other luminary of Divine guidance, set out from his native province of Gílán with the object of visiting Shaykh Ahmad, ere the <a name="p10"></a>latter undertook his pilgrimage to Khurásán. In the course of his first interview with him, Shaykh Ahmad spoke these words: "I welcome you, O my friend! How long and how eagerly have I waited for you to come and deliver me from the arrogance of this perverse people! I am oppressed by the shamelessness of their acts and the depravity of their character. 'Verily, We proposed to the heavens, and to the earth, and to the mountains, to receive the trust of God, but they refused the burden, and they feared to receive it. Man undertook to bear it; and he, verily, hath proved unjust, ignorant.'"
 	</td>
     <td VALIGN=top height=1px><div class=scrollable><small>
-	<a name="f16"></a><a href="p001-018Ch01-footnotes.html#f16">16.</a>	"His [Siyyid Kázim's] family were merchants of repute. If is father was named Áqá Siyyid Qásim. When twelve years old, he was living at Ardibíl near the tomb of Shaykh Safi'u'd-Din Ishaq, the descendant of the seventh Imám Músá Kázim and the ancestor of the Safaví kings. One night in a dream it was signified to him by one of the illustrious progenitors of the buried saint that he should put himself under the spiritual guidance of Shaykh Ahmad-i-Ahsá'í, who was at this time residing at Yazd. He accordingly proceeded thither and enrolled himself amongst the disciples of Shaykh Ahmad, in whose doctrine he attained such eminence that on the Shaykh's death he was unanimously recognised as the leader of the Shaykhí school." ("A Traveller's Narrative," Note E, p. 238)  
+	<a name="f16"></a><a href="p001-018Ch01-footnotes.html#f16">16.</a>	"His [Siyyid Kázim's] family were merchants of repute. His father was named Áqá Siyyid Qásim. When twelve years old, he was living at Ardibíl near the tomb of Shaykh Safí'u'd-Dín Isháq, the descendant of the seventh Imám Músá Kázim and the ancestor of the Safaví kings. One night in a dream it was signified to him by one of the illustrious progenitors of the buried saint that he should put himself under the spiritual guidance of Shaykh Ahmad-i-Ahsá'í, who was at this time residing at Yazd. He accordingly proceeded thither and enrolled himself amongst the disciples of Shaykh Ahmad, in whose doctrine he attained such eminence that on the Shaykh's death he was unanimously recognised as the leader of the Shaykhí school." ("A Traveller's Narrative," Note E, p. 238)  
 	</small></div></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate"></DIV>10</center></small></td>
 </tr>
@@ -217,9 +217,9 @@
 	<a name="f18"></a><a href="p001-018Ch01-footnotes.html#f18">18.</a>	"The Sháh felt his good will and respect for the Shaykh grow increasingly from day to day. He felt obliged to obey him and would have considered it an act of blasphemy to oppose him. However, at this time, a succession of earthquakes occurred in Rayy and many were destroyed. "The Sháh had a dream in which it was revealed to him that, if Shaykh Ahmad had not been there, the entire city would have been destroyed and all the inhabitants killed. He awakened terrified and his faith in the Shaykh grew apace." (A. L. M. Nicolas' "Essai sur le Shaykhisme," I, p. 21.)  <p>
 	<a name="f19"></a><a href="p001-018Ch01-footnotes.html#f19">19.</a>	Mírzá Abu'l-Fadl asserts in his writings that the genealogy of Bahá'u'lláh can be traced back to the ancient Prophets of Persia as well as to its kings who ruled over the land prior to the Arab invasion.  <p>
 	<a name="f20"></a><a href="p001-018Ch01-footnotes.html#f20">20.</a>	His name was Mírzá Husayn-'Alí.  <p>
-	<a name="f21"></a><a href="p001-018Ch01-footnotes.html#f21">21.</a>	November 12, 1817 A.D. 
+	<a name="f21"></a><a href="p001-018Ch01-footnotes.html#f21">21.</a>	November 12, 1817 A.D.<sup>*</sup>
 	<hr>
-	[Festivals of the Twin Birthdays] "...will now be observed on the first and the second day following the occurrence of the eighth new moon after <span style="background-color: #ffffCC" TITLE="'New Day.' Name applied to the Bahá'í New Year's Day; according to the Persian calendar, the day on which the sun enters Aries">Naw-Rúz</span>." <a href="../../UHJ/Messages/10July2014TotheBahaisoftheWorld.xhtml">UHJ</a>  
+	* [Festivals of the Twin Birthdays] "...will now be observed on the first and the second day following the occurrence of the eighth new moon after <span style="background-color: #ffffCC" TITLE="'New Day.' Name applied to the Bahá'í New Year's Day; according to the Persian calendar, the day on which the sun enters Aries">Naw-Rúz</span>." <a href="../../UHJ/Messages/10July2014TotheBahaisoftheWorld.xhtml">UHJ</a>  
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">13</DIV></center><p></small></td>
 </tr>
