--- a/Baha'i/Others/DBNN/p047-096Ch03-footnotes.html
+++ b/Baha'i/Others/DBNN/p047-096Ch03-footnotes.html
@@ -29,6 +29,22 @@ changed muadhdhín to mu'adhdhín to match glossary
 
 <body>
 
+</table>
+<table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
+<tr>
+       <td>
+	   	   <FORM ACTION="p019-046Ch02-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE="<" NAME=back>
+		   </FORM>	   
+	   </td>
+       <td>
+	   	   <FORM ACTION="p097-108Ch04-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE=">" NAME=next>
+		   </FORM>	   
+	   </td>
+</tr>
+</table>
+
 	<h1>FOOTNOTES</h1>
 	<h2>CHAPTER III</h2>
 	<h3>THE DECLARATION OF THE BÁB'S MISSION</h3>
@@ -493,11 +509,11 @@ changed muadhdhín to mu'adhdhín to match glossary
 	&bull; Nuqtiy-i-<span style="background-color: #ffffCC" TITLE="'Utterance,' 'explanation.' Title given by the Báb to His Revelation, particularly to His Books.">Bayán</span><br>
 	&bull; Siyyid-i-Báb
 	</blockquote>
-	<a name="f18"></a><a href="p047-096Ch03-footnotes.html#f18">18.</a>	October 20, 1819 A.D.  <p>
+	<a name="f18"></a><a href="p047-096Ch03-footnotes.html#f18">18.</a>	October 20, 1819 A.D.<sup>*</sup>  <p>
 	<a name="f19"></a><a href="p047-096Ch03-footnotes.html#f19">19.</a>	According to Mírzá Abu'l-Fadl (manuscript on history of the Cause, p. 3), the Báb was still an infant, and had not yet been weaned, when His father passed away.  <p>
 	<a name="f20"></a><a href="p047-096Ch03-footnotes.html#f20">20.</a>	According to Mírzá Abu'l-Fadl (manuscript, p. 41,) the Báb was six or seven years of age when He entered the school of Shaykh Abid. The school was known by the name of "Qahviyih-Awliya." The Báb remained five years at that school where He was taught the rudiments of Persian. On the first day of the month of Rabí'u'l-Avval, in the year 1257 A.H., He left for Najaf and Karbilá, returning seven months after to His native province of Fárs.
 	<hr>
-	[Festivals of the Twin Birthdays] "...will now be observed on the first and the second day following the occurrence of the eighth new moon after <span style="background-color: #ffffCC" TITLE="'New Day.' Name applied to the Bahá'í New Year's Day; according to the Persian calendar, the day on which the sun enters Aries">Naw-Rúz</span>." <a href="../../UHJ/Messages/10July2014TotheBahaisoftheWorld.xhtml">UHJ</a>  
+	* [Festivals of the Twin Birthdays] "...will now be observed on the first and the second day following the occurrence of the eighth new moon after <span style="background-color: #ffffCC" TITLE="'New Day.' Name applied to the Bahá'í New Year's Day; according to the Persian calendar, the day on which the sun enters Aries">Naw-Rúz</span>." <a href="../../UHJ/Messages/10July2014TotheBahaisoftheWorld.xhtml">UHJ</a>  
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">73</DIV></center></small></td>
 </tr>
@@ -783,6 +799,22 @@ changed muadhdhín to mu'adhdhín to match glossary
 	<td VALIGN=top>&nbsp;</td>
 </tr>
 
+</table>
+
+</table>
+<table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
+<tr>
+       <td>
+	   	   <FORM ACTION="p019-046Ch02-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE="<" NAME=back>
+		   </FORM>	   
+	   </td>
+       <td>
+	   	   <FORM ACTION="p097-108Ch04-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE=">" NAME=next>
+		   </FORM>	   
+	   </td>
+</tr>
 </table>
 
 </body>
