--- a/Baha'i/Others/DBNN/p047-096Ch03.html
+++ b/Baha'i/Others/DBNN/p047-096Ch03.html
@@ -429,7 +429,7 @@ changed muadhdhín to mu'adhdhín to match glossary
 </tr>
 <tr>
 	<td><a name="para30"></a>
-	The acceptance by Quddús of the truth of the Báb's Revelation completed the assigned number of His chose disciples. Quddús, whose name was Muhammad-'Alí, was, through his mother, a direct descendant of the Imám Hasan, the grandson of the Prophet Muhammad. <sup><small>16</small></sup><p>
+	The acceptance by Quddús of the truth of the Báb's Revelation completed the assigned number of His chosen disciples. Quddús, whose name was Muhammad-'Alí, was, through his mother, a direct descendant of the Imám Hasan, the grandson of the Prophet Muhammad. <sup><small>16</small></sup><p>
 
 
 	<center>
@@ -500,11 +500,11 @@ changed muadhdhín to mu'adhdhín to match glossary
 	&bull; Nuqtiy-i-<span style="background-color: #ffffCC" TITLE="'Utterance,' 'explanation.' Title given by the Báb to His Revelation, particularly to His Books.">Bayán</span><br>
 	&bull; Siyyid-i-Báb
 	</blockquote>
-	<a name="f18"></a><a href="p047-096Ch03-footnotes.html#f18">18.</a>	October 20, 1819 A.D.  <p>
+	<a name="f18"></a><a href="p047-096Ch03-footnotes.html#f18">18.</a>	October 20, 1819 A.D.<sup>*</sup>  <p>
 	<a name="f19"></a><a href="p047-096Ch03-footnotes.html#f19">19.</a>	According to Mírzá Abu'l-Fadl (manuscript on history of the Cause, p. 3), the Báb was still an infant, and had not yet been weaned, when His father passed away.  <p>
 	<a name="f20"></a><a href="p047-096Ch03-footnotes.html#f20">20.</a>	According to Mírzá Abu'l-Fadl (manuscript, p. 41,) the Báb was six or seven years of age when He entered the school of Shaykh Abid. The school was known by the name of "Qahviyih-Awliya." The Báb remained five years at that school where He was taught the rudiments of Persian. On the first day of the month of Rabí'u'l-Avval, in the year 1257 A.H., He left for Najaf and Karbilá, returning seven months after to His native province of Fárs.
 	<hr>
-	[Festivals of the Twin Birthdays] "...will now be observed on the first and the second day following the occurrence of the eighth new moon after <span style="background-color: #ffffCC" TITLE="'New Day.' Name applied to the Bahá'í New Year's Day; according to the Persian calendar, the day on which the sun enters Aries">Naw-Rúz</span>." <a href="../../UHJ/Messages/10July2014TotheBahaisoftheWorld.xhtml">UHJ</a>  
+	* [Festivals of the Twin Birthdays] "...will now be observed on the first and the second day following the occurrence of the eighth new moon after <span style="background-color: #ffffCC" TITLE="'New Day.' Name applied to the Bahá'í New Year's Day; according to the Persian calendar, the day on which the sun enters Aries">Naw-Rúz</span>." <a href="../../UHJ/Messages/10July2014TotheBahaisoftheWorld.xhtml">UHJ</a>  
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">73</DIV></center></small></td>
 </tr>
