--- a/Baha'i/Others/DBNN/p109-122Ch05-footnotes.html
+++ b/Baha'i/Others/DBNN/p109-122Ch05-footnotes.html
@@ -26,6 +26,22 @@
 	
 </head>
 
+</table>
+<table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
+<tr>
+       <td>
+	   	   <FORM ACTION="p097-108Ch04-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE="<" NAME=back>
+		   </FORM>	   
+	   </td>
+       <td>
+	   	   <FORM ACTION="p123-128Ch06-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE=">" NAME=next>
+		   </FORM>	   
+	   </td>
+</tr>
+</table>
+
 <body>
 
 	<h1>FOOTNOTES</h1>
@@ -250,6 +266,22 @@
 	&nbsp;
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
+</tr>
+</table>
+
+</table>
+<table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
+<tr>
+       <td>
+	   	   <FORM ACTION="p097-108Ch04-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE="<" NAME=back>
+		   </FORM>	   
+	   </td>
+       <td>
+	   	   <FORM ACTION="p123-128Ch06-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE=">" NAME=next>
+		   </FORM>	   
+	   </td>
 </tr>
 </table>
 
