--- a/Baha'i/Others/DBNN/p199-216Ch10-footnotes.html
+++ b/Baha'i/Others/DBNN/p199-216Ch10-footnotes.html
@@ -28,6 +28,22 @@
 
 <body>
 
+</table>
+<table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
+<tr>
+       <td>
+	   	   <FORM ACTION="p170-198Ch09-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE="<" NAME=back>
+		   </FORM>	   
+	   </td>
+       <td>
+	   	   <FORM ACTION="p217-222Ch11-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE=">" NAME=next>
+		   </FORM>	   
+	   </td>
+</tr>
+</table>
+
 	<h1>FOOTNOTES</h1>
 	<h2>CHAPTER X</h2>
 	<h3>THE BÁB'S SOJOURN IN ISFÁHÁN</h3>
@@ -287,6 +303,22 @@
 	<td VALIGN=bottom><small><center><DIV TITLE="Page number location is approximate">216</DIV></center></small></td>
 </tr>
 
+</table>
+
+</table>
+<table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
+<tr>
+       <td>
+	   	   <FORM ACTION="p170-198Ch09-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE="<" NAME=back>
+		   </FORM>	   
+	   </td>
+       <td>
+	   	   <FORM ACTION="p217-222Ch11-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE=">" NAME=next>
+		   </FORM>	   
+	   </td>
+</tr>
 </table>
 
 </body>
