--- a/Baha'i/Others/DBNN/p217-222Ch11-footnotes.html
+++ b/Baha'i/Others/DBNN/p217-222Ch11-footnotes.html
@@ -27,6 +27,22 @@
 
 <body>
 
+</table>
+<table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
+<tr>
+       <td>
+	   	   <FORM ACTION="p199-216Ch10-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE="<" NAME=back>
+		   </FORM>	   
+	   </td>
+       <td>
+	   	   <FORM ACTION="p223-242Ch12-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE=">" NAME=next>
+		   </FORM>	   
+	   </td>
+</tr>
+</table>
+
 	<h1>FOOTNOTES</h1>
 	<h2>CHAPTER XI</h2>
 	<h3>THE BÁB'S STAY IN KÁSHÁN</h3>
@@ -130,6 +146,22 @@
 	<a name="f3"></a><a href="p217-222Ch11-footnotes.html#f3">3.</a>	1851–2 A.D.
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">222</DIV></center></small></td>
+</tr>
+</table>
+
+</table>
+<table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
+<tr>
+       <td>
+	   	   <FORM ACTION="p199-216Ch10-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE="<" NAME=back>
+		   </FORM>	   
+	   </td>
+       <td>
+	   	   <FORM ACTION="p223-242Ch12-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE=">" NAME=next>
+		   </FORM>	   
+	   </td>
 </tr>
 </table>
 
