--- a/Baha'i/Others/DBNN/p301-308Ch17-footnotes.html
+++ b/Baha'i/Others/DBNN/p301-308Ch17-footnotes.html
@@ -26,6 +26,22 @@ Man-Yuzhiruhu'llah changed to Man-Yuzhiruh'lláh (to match glossary)
 	</style>
 </head>
 
+</table>
+<table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
+<tr>
+       <td>
+	   	   <FORM ACTION="p288-300Ch16-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE="<" NAME=back>
+		   </FORM>	   
+	   </td>
+       <td>
+	   	   <FORM ACTION="p309-323Ch18-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE=">" NAME=next>
+		   </FORM>	   
+	   </td>
+</tr>
+</table>
+
 <body>
 
 	<h1>FOOTNOTES</h1>
@@ -193,6 +209,22 @@ Man-Yuzhiruhu'llah changed to Man-Yuzhiruh'lláh (to match glossary)
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">308</DIV></center></small></td>
 </tr>
 
+</table>
+
+</table>
+<table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
+<tr>
+       <td>
+	   	   <FORM ACTION="p288-300Ch16-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE="<" NAME=back>
+		   </FORM>	   
+	   </td>
+       <td>
+	   	   <FORM ACTION="p309-323Ch18-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE=">" NAME=next>
+		   </FORM>	   
+	   </td>
+</tr>
 </table>
 
 </body>
