--- a/Baha'i/Others/DBNN/p309-323Ch18-footnotes.html
+++ b/Baha'i/Others/DBNN/p309-323Ch18-footnotes.html
@@ -27,6 +27,22 @@
 
 <body>
 
+</table>
+<table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
+<tr>
+       <td>
+	   	   <FORM ACTION="p301-308Ch17-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE="<" NAME=back>
+		   </FORM>	   
+	   </td>
+       <td>
+	   	   <FORM ACTION="p324-377Ch19-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE=">" NAME=next>
+		   </FORM>	   
+	   </td>
+</tr>
+</table>
+
 	<h1>FOOTNOTES</h1>
 	<h2>CHAPTER XVIII</h2>
 	<h3>EXAMINATION OF THE BÁB AT TABRIZ</h3>
@@ -257,6 +273,22 @@
 	<td VALIGN=top>&nbsp;</td>
 </tr>
 
+</table>
+
+</table>
+<table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
+<tr>
+       <td>
+	   	   <FORM ACTION="p301-308Ch17-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE="<" NAME=back>
+		   </FORM>	   
+	   </td>
+       <td>
+	   	   <FORM ACTION="p324-377Ch19-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE=">" NAME=next>
+		   </FORM>	   
+	   </td>
+</tr>
 </table>
 
 </body>
