--- a/Baha'i/Others/DBNN/p378-429Ch20.html
+++ b/Baha'i/Others/DBNN/p378-429Ch20.html
@@ -245,7 +245,9 @@ footnote 40 - changed The "Kitáb-i-Íqán," pp. 189-91 to 224-6.
 	<a name="f19"/><a href="p378-429Ch20-footnotes.html#f19">19.</a>	"Mihdí-Qulí Mírzá, however, wished to combine recent strategy with old military technique and ordered to be brought from Tihrán two cannon and two mortars with the necessary ammunition. He also enlisted the assistance of a man from Hirát who had discovered an explosive substance which could project flames to a distance of seven hundred meters and set fire to anything combustible within that radius. A trial test was made and it proved satisfactory; the burning material was shot out into the fort, a conflagration started immediately and all the dwellings or shelters whether of wood, of reeds or of straw, which the Bábís had erected, either within the enclosure or upon the walls, were reduced to ashes.
 		"While this destruction went on, the bombs and bullets shot from the mortars seriously damaged a building hastily erected by men who were neither architects nor engineers and had never anticipated an artillery attack. In a very short time, the outer defences of the fortress were dismantled; nothing was left of them but fallen girders, smoked and burning timbers, scattered stones." (<i>Ibid</i>., pp. 181–2.)<p>
 	<a name="f20"/><a href="p378-429Ch20-footnotes.html#f20">20.</a>	"After taking these precautions, they dug holes and trenches for the use of the tufang-chis who were ordered to shoot down any Bábís who might appear. They built large towers as high as the various levels of the fortress or even higher and, through a continuous plunging fire, they rendered the circulation of the Bábís within their fort extremely dangerous. It was a decided advantage for the besiegers, but, in a few days, the Bábí chiefs, taking advantage of the long nights, raised their fortifications so that their height exceeded that of the attacking towers of the enemy." (<i>Ibid</i>., p. 181.)  <p>
-	<a name="f21"/><a href="p378-429Ch20-footnotes.html#f21">21.</a>	The ninth day after <span style="background-color: #ffffCC" TITLE="'New Day.' Name applied to the Bahá'í New Year's Day; according to the Persian calendar, the day on which the sun enters Aries">Naw-Rúz</span>.  
+	<a name="f21"/><a href="p378-429Ch20-footnotes.html#f21">21.</a>	The ninth day after <span style="background-color: #ffffCC" TITLE="'New Day.' Name applied to the Bahá'í New Year's Day; according to the Persian calendar, the day on which the sun enters Aries">Naw-Rúz</span>.
+	<hr>
+	["...the people of 'Ád and Thámúd..."]  <i>The Revelation of Bahá'u'lláh</i>, vol. 4, <a href="../ROB/V4/p425-428Apndx_I.html">Appendix I</a><p>  
 	</small></div></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">391</DIV></center></small></td>
 </tr>
@@ -1742,7 +1744,7 @@ footnote 40 - changed The "Kitáb-i-Íqán," pp. 189-91 to 224-6.
 </tr>
 <tr class=hideRowWithNoFootnotes>
 	<td><a name="para182"></a>
-	120. Muhammad-'Attaacute;r, brother of Hasan-i-Sha'r-Baf,
+	120. Muhammad-'Attár, brother of Hasan-i-Sha'r-Baf,
 	</td>
 	<td VALIGN=top><small>
 	&nbsp;
