--- a/Baha'i/Others/DBNN/p527-581Ch24.html
+++ b/Baha'i/Others/DBNN/p527-581Ch24.html
@@ -701,7 +701,7 @@
 </tr>
 <tr>
 	<td><a name="para69"></a>
-	The <span style="background-color: #ffffCC" TITLE="'Lord,' 'prince,' 'commander,' 'governor'">Amír</span> promptly ordered a number of his men, who were famed for their marksmanship, to lie in wait for Muhsin and shoot him when in the act of prayer. It was the hour of dawn when, as he raised the cry of "Lá Ilah-à-Illa'llah," <sup><small>43</small></sup> a bullet struck him in the mouth and killed him instantly. Hujjat, as soon as he was informed of that cruel act, ordered another of his companions to ascend the turret and continue the prayer from where Muhsin had left off. Though his life was spared until the cessation of hostilities, he, together with certain of his brethren, was made to suffer, eventually, a death no less atrocious than that of his fellow-disciple.
+	The <span style="background-color: #ffffCC" TITLE="'Lord,' 'prince,' 'commander,' 'governor'">Amír</span> promptly ordered a number of his men, who were famed for their marksmanship, to lie in wait for Muhsin and shoot him when in the act of prayer. It was the hour of dawn when, as he raised the cry of "Lá Iláh-a-Illa'lláh," <sup><small>43</small></sup> a bullet struck him in the mouth and killed him instantly. Hujjat, as soon as he was informed of that cruel act, ordered another of his companions to ascend the turret and continue the prayer from where Muhsin had left off. Though his life was spared until the cessation of hostilities, he, together with certain of his brethren, was made to suffer, eventually, a death no less atrocious than that of his fellow-disciple.
 	</td>
 	<td VALIGN=top><small>
 	<a name="f43"/><a href="p527-581Ch24-footnotes.html#f43">43.</a>	There is no God but God.  
