--- a/Baha'i/Others/DBNN/p595-650Ch26-footnotes.html
+++ b/Baha'i/Others/DBNN/p595-650Ch26-footnotes.html
@@ -28,6 +28,22 @@ footnote #15 - page number for EttSotW changed from 57 to 77
 
 <body>
 
+</table>
+<table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
+<tr>
+       <td>
+	   	   <FORM ACTION="p582-594Ch25-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE="<" NAME=back>
+		   </FORM>	   
+	   </td>
+       <td>
+	   	   <FORM ACTION="p651-668Epilogue-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE=">" NAME=next>
+		   </FORM>	   
+	   </td>
+</tr>
+</table>
+
 	<h1>FOOTNOTES</h1>
 	<h2>CHAPTER XXVI</h2>
 	<h3>ATTEMPT ON THE SHÁH'S LIFE, AND ITS CONSEQUENCES</h3>
@@ -938,6 +954,22 @@ footnote #15 - page number for EttSotW changed from 57 to 77
 	<td VALIGN=top>&nbsp;</td>
 </tr>
 
+</table>
+
+</table>
+<table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
+<tr>
+       <td>
+	   	   <FORM ACTION="p582-594Ch25-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE="<" NAME=back>
+		   </FORM>	   
+	   </td>
+       <td>
+	   	   <FORM ACTION="p651-668Epilogue-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE=">" NAME=next>
+		   </FORM>	   
+	   </td>
+</tr>
 </table>
 
 </body>
