--- a/Baha'i/Others/DBNN/p651-668Epilogue-footnotes.html
+++ b/Baha'i/Others/DBNN/p651-668Epilogue-footnotes.html
@@ -29,6 +29,17 @@ footnote #9 - first part does not seem to match the book.
 
 <body>
 
+</table>
+<table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
+<tr>
+       <td>
+	   	   <FORM ACTION="p595-650Ch26-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE="<" NAME=back>
+		   </FORM>	   
+	   </td>
+</tr>
+</table>
+
 	<h1>FOOTNOTES</h1>
 	<h1>EPILOGUE</h1>
 	
@@ -216,6 +227,17 @@ footnote #9 - first part does not seem to match the book.
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">668</DIV></center></small></td>
 </tr>
 
+</table>
+
+</table>
+<table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
+<tr>
+       <td>
+	   	   <FORM ACTION="p595-650Ch26-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE="<" NAME=back>
+		   </FORM>	   
+	   </td>
+</tr>
 </table>
 
 </body>
