--- a/Baha'i/Others/DBNN/p669-673Appendix.html
+++ b/Baha'i/Others/DBNN/p669-673Appendix.html
@@ -1045,7 +1045,7 @@
 		          <td><div align="right">29 "</div></td>
 		   </tr>
 		   <tr>
-		          <td>Rabí'u'l-Avva</td>
+		          <td>Rabí'u'l-Avval</td>
 		          <td><div align="right">30 "</div></td>
 		   </tr>
 		   <tr>
@@ -1073,7 +1073,7 @@
 		          <td><div align="right">30 "</div></td>
 		   </tr>
 		   <tr>
-		          <td>Shavval</td>
+		          <td>Shavvál</td>
 		          <td><div align="right">29 "</div></td>
 		   </tr>
 		   <tr>
