--- a/Baha'i/Others/DBNN/BabsAutographTablets.html
+++ b/Baha'i/Others/DBNN/BabsAutographTablets.html
@@ -49,8 +49,8 @@
 	<i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../Baha/GL/p003-346.html#CXXXV">CXXXV</a><p>
 	["... Beware, beware..."] <i>Epistle to the Son of the Wolf</i>, <a href="../../Baha/EW/p001-182.html#para224">p. 153</a><p>
 	<a href="../../SE/GPB/p413-436Index.html#LettersoftheLiving"><i>God Passes By</i></a><p>
-	["In his devoted services..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 1 <a href="../ROB/V1/p198-209Ch11.html#p201">p. 201</a> & footnote; <i>also</i> vo1. 1 <a href="../ROB/V1/p351-363Index.html#LettersoftheLiving">Index</a><p>
-	["Similar statements are found..."]  <i>The Revelation of Bahá'u'lláh</i>, vol. 2 <a href="../ROB/V2/p171-193Ch08.html#p182">p. 182</a>; <i>also</i> vo1. 2 <a href="../ROB/V2/p469-476Index.html#LettersoftheLiving">Index</a><p>
+	["In his devoted services..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 1 <a href="../ROB/V1/p198-209Ch11.html#p201">p. 201</a> & footnote; <i>also</i> vol. 1 <a href="../ROB/V1/p351-363Index.html#LettersoftheLiving">Index</a><p>
+	["Similar statements are found..."]  <i>The Revelation of Bahá'u'lláh</i>, vol. 2 <a href="../ROB/V2/p171-193Ch08.html#p182">p. 182</a>; <i>also</i> vol. 2 <a href="../ROB/V2/p469-476Index.html#LettersoftheLiving">Index</a><p>
 	</small></td>
 	<td VALIGN=top>xxi</td>
 </tr>
@@ -65,6 +65,7 @@
 	<td VALIGN=top><small>
 	<hr>
 	<i>First Letter of the Living:</i> Mullá Husayn-i-Bushrú'í<p>
+	<a href="p378-429Ch20.html#para58">p. 415</a><p>
 	<i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#para146">p. 223</a><p>
 	[Súriy-i-Vafá] <i>Tablets of Bahá'u'lláh</i>, <a href="../../Baha/TOB/p001-270TOB.html#para530">p. 184</a><p>
 	<a href="../../SE/GPB/p413-436Index.html#Husayn,Mullá"><i>God Passes By</i></a><p>
@@ -82,7 +83,8 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>Second Letter of the Living:</i> Muhammad Hasan (Mullá Husayn-i-Bushrú'í's Brother)
+	<i>Second Letter of the Living:</i> Muhammad Hasan (Mullá Husayn-i-Bushrú'í's Brother)<p>
+	<a href="p378-429Ch20.html#para59">p. 415</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -97,6 +99,7 @@
 	<td VALIGN=top><small>
 	<hr>
 	<i>Third Letter of the Living:</i> Muhammad-Báqir (Mullá Husayn-i-Bushrú'í's Nephew)<p>
+	<a href="p378-429Ch20.html#para60">p. 415</a><p>
 	["Upon my arrival..."] <a href="p268-287Ch15.html#para34">p. 287</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
@@ -204,7 +207,8 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>Tenth Letter of the Living:</i> Mullá Mahmúd-i-Khú'í
+	<i>Tenth Letter of the Living:</i> Mullá Mahmúd-i-Khú'í<p>
+	<a href="p378-429Ch20.html#para214">p. 423</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -219,6 +223,7 @@
 	<td VALIGN=top><small>
 	<hr>
 	<i>Eleventh Letter of the Living:</i> Mullá Jalíl-i-Urúmí<p>
+	<a href="p378-429Ch20.html#para216">p. 424</a><p>
 	["Hájí Nasír was a well-known..."] <i>The Revelation of Bahá'u'lláh</i> vol. 2 <a href="../ROB/V2/p236-269Ch11.html#p245">p. 245</a> 
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
@@ -234,6 +239,7 @@
 	<td VALIGN=top><small>
 	<hr>
 	<i>Twelfth Letter of the Living:</i> Mullá Ahmad-i-Ibdal-i-Marághi'í<p>
+	<a href="p378-429Ch20.html#para217">p. 424</a><p>
 	<a href="p223-242Ch12.html#p235">p. 235</a> footnote #21; <a href="p288-300Ch16.html#p292">p. 292</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
@@ -266,7 +272,7 @@
 	<td VALIGN=top><small>
 	<hr>
 	<i>Fourteenth Letter of the Living:</i> Mullá Yusif-i-Ardibílí<p>
-	<a href="p378-429Ch20.html#para215">p. 424</a>&nbsp;&nbsp;  #149 (also <a href="p378-429Ch20.html#para69">#13</a>, <a href="p378-429Ch20.html#para33">p. 399</a>, <a href="p378-429Ch20.html#para43">p. 404</a> footnote #38)<p>
+	<a href="p378-429Ch20.html#para215">p. 423</a>&nbsp;&nbsp;  #149 (also <a href="p378-429Ch20.html#para69">#13</a>, <a href="p378-429Ch20.html#para33">p. 399</a>, <a href="p378-429Ch20.html#para43">p. 404</a> footnote #38)<p>
 	<i>The Kitáb-i-Íqán</i> <a href="../../Baha/KI/p095-258.html#para146">p. 223</a><p>	
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
@@ -299,6 +305,7 @@
 	<td VALIGN=top><small>
 	<hr>
 	<i>Sixteenth Letter of the Living:</i> Mírzá Muhammad-i 'Alíy-i-Qazvíní<p>
+	<a href="p378-429Ch20.html#para206">p. 423</a><p>
 	<a href="p679-685Index.html#DBNN-Muhammad-'Alíy-i-Qazvíní,Mírzá">Index</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
@@ -331,6 +338,7 @@
 	<td VALIGN=top><small>
 	<hr>
 	<i>Eighteenth Letter of the Living:</i> Hájí Mullá Muhammad-Aliy-i-Barfurushi, Quddús<p>
+	<a href="p378-429Ch20.html#para57">p. 415</a><p>
 	["Upon Quddús..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 4, <a href="../ROB/V4/p205-213Ch14.html#p210">p. 210</a>; <i>also</i> vol. <a href="../ROB/V1/p351-363Index.html#Quddús">1</a>, <a href="../ROB/V2/p469-476Index.html#Quddús">2</a><p>
 	[Tablet of <i>Kullu't-Ta'ám</i>] <i>God Passes By</i> <a href="../../SE/GPB/p001-086FirstPeriod.html#para78">p. 49</a>; <i>also</i> <a href="../../SE/GPB/p413-436Index.html#Quddús">Index</a><p>
 	["In this tablet..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 1 <a href="../ROB/V1/p053-070Ch05.html#p60">p. 60</a><p>
