--- a/Baha'i/Others/DBNN/p123-128Ch06-footnotes.html
+++ b/Baha'i/Others/DBNN/p123-128Ch06-footnotes.html
@@ -28,6 +28,22 @@
 
 <body>
 
+</table>
+<table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
+<tr>
+       <td>
+	   	   <FORM ACTION="p109-122Ch05-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE="<" NAME=back>
+		   </FORM>	   
+	   </td>
+       <td>
+	   	   <FORM ACTION="p129-141Ch07-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE=">" NAME=next>
+		   </FORM>	   
+	   </td>
+</tr>
+</table>
+
 	<h1>FOOTNOTES</h1>
 	<h2>CHAPTER VI</h2>
 	<h3>MULLA HUSAYN'S JOURNEY TO KHURÁSÁN</h3>
@@ -153,6 +169,22 @@
 	&nbsp;
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
+</tr>
+</table>
+
+</table>
+<table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
+<tr>
+       <td>
+	   	   <FORM ACTION="p109-122Ch05-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE="<" NAME=back>
+		   </FORM>	   
+	   </td>
+       <td>
+	   	   <FORM ACTION="p129-141Ch07-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE=">" NAME=next>
+		   </FORM>	   
+	   </td>
 </tr>
 </table>
 
