--- a/Baha'i/Others/DBNN/p268-287Ch15-footnotes.html
+++ b/Baha'i/Others/DBNN/p268-287Ch15-footnotes.html
@@ -27,6 +27,22 @@
 
 <body>
 
+</table>
+<table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
+<tr>
+       <td>
+	   	   <FORM ACTION="p243-260Ch13-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE="<" NAME=back>
+		   </FORM>	   
+	   </td>
+       <td>
+	   	   <FORM ACTION="p288-300Ch16-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE=">" NAME=next>
+		   </FORM>	   
+	   </td>
+</tr>
+</table>
+
 	<h1>FOOTNOTES</h1>
 	<h2>CHAPTER XV</h2>
 	<h3>TÁHIRIH'S JOURNEY FROM KARBILÁ TO KHURÁSÁN</h3>
@@ -382,6 +398,22 @@
 	<td VALIGN=top>&nbsp;</td>
 </tr>
 
+</table>
+
+</table>
+<table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
+<tr>
+       <td>
+	   	   <FORM ACTION="p243-260Ch13-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE="<" NAME=back>
+		   </FORM>	   
+	   </td>
+       <td>
+	   	   <FORM ACTION="p288-300Ch16-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE=">" NAME=next>
+		   </FORM>	   
+	   </td>
+</tr>
 </table>
 
 </body>
