--- a/Baha'i/Others/DBNN/p430-464Ch21-footnotes.html
+++ b/Baha'i/Others/DBNN/p430-464Ch21-footnotes.html
@@ -28,6 +28,22 @@ footnote #10, page number in EttSotW changed from 125 to 168
 
 <body>
 
+</table>
+<table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
+<tr>
+       <td>
+	   	   <FORM ACTION="p378-429Ch20-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE="<" NAME=back>
+		   </FORM>	   
+	   </td>
+       <td>
+	   	   <FORM ACTION="p465-499Ch22-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE=">" NAME=next>
+		   </FORM>	   
+	   </td>
+</tr>
+</table>
+
 	<h1>FOOTNOTES</h1>
 	<h2>CHAPTER XXI</h2>
 	<h3>THE SEVEN MARTYRS OF TIHRÁN</h3>
@@ -682,6 +698,22 @@ footnote #10, page number in EttSotW changed from 125 to 168
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">464</DIV></center></small></td>
 </tr>
 
+</table>
+
+</table>
+<table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
+<tr>
+       <td>
+	   	   <FORM ACTION="p378-429Ch20-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE="<" NAME=back>
+		   </FORM>	   
+	   </td>
+       <td>
+	   	   <FORM ACTION="p465-499Ch22-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE=">" NAME=next>
+		   </FORM>	   
+	   </td>
+</tr>
 </table>
 
 </body>
