--- a/Baha'i/Others/DBNN/p500-526Ch23-footnotes.html
+++ b/Baha'i/Others/DBNN/p500-526Ch23-footnotes.html
@@ -28,6 +28,22 @@ Footnote #18 - changed  "Some Answered Questions," pp. 30–31 to pp. 25-26
 
 <body>
 
+</table>
+<table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
+<tr>
+       <td>
+	   	   <FORM ACTION="p465-499Ch22-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE="<" NAME=back>
+		   </FORM>	   
+	   </td>
+       <td>
+	   	   <FORM ACTION="p527-581Ch24-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE=">" NAME=next>
+		   </FORM>	   
+	   </td>
+</tr>
+</table>
+
 	<h1>FOOTNOTES</h1>
 	<h2>CHAPTER XXIII</h2>
 	<h3>MARTYRDOM OF THE BÁB</h3>
@@ -469,6 +485,22 @@ Footnote #18 - changed  "Some Answered Questions," pp. 30–31 to pp. 25-26
 	<td VALIGN=top>&nbsp;</td>
 </tr>
 
+</table>
+
+</table>
+<table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
+<tr>
+       <td>
+	   	   <FORM ACTION="p465-499Ch22-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE="<" NAME=back>
+		   </FORM>	   
+	   </td>
+       <td>
+	   	   <FORM ACTION="p527-581Ch24-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE=">" NAME=next>
+		   </FORM>	   
+	   </td>
+</tr>
 </table>
 
 </body>
