--- a/Baha'i/Others/DBNN/p582-594Ch25-footnotes.html
+++ b/Baha'i/Others/DBNN/p582-594Ch25-footnotes.html
@@ -27,6 +27,22 @@
 
 <body>
 
+</table>
+<table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
+<tr>
+       <td>
+	   	   <FORM ACTION="p527-581Ch24-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE="<" NAME=back>
+		   </FORM>	   
+	   </td>
+       <td>
+	   	   <FORM ACTION="p595-650Ch26-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE=">" NAME=next>
+		   </FORM>	   
+	   </td>
+</tr>
+</table>
+
 	<h1>FOOTNOTES</h1>
 	<h2>CHAPTER XXV</h2>
 	<h3>BAHÁ'U'LLÁH'S JOURNEY TO KARBILÁ</h3>
@@ -277,6 +293,22 @@
 	<td VALIGN=top>&nbsp;</td>
 </tr>
 
+</table>
+
+</table>
+<table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
+<tr>
+       <td>
+	   	   <FORM ACTION="p527-581Ch24-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE="<" NAME=back>
+		   </FORM>	   
+	   </td>
+       <td>
+	   	   <FORM ACTION="p595-650Ch26-footnotes.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE=">" NAME=next>
+		   </FORM>	   
+	   </td>
+</tr>
 </table>
 
 </body>
