--- a/Baha'i/Baha/TOB/p001-270TOB.html
+++ b/Baha'i/Baha/TOB/p001-270TOB.html
@@ -7082,7 +7082,7 @@
 	  <td VALIGN=top><small>
 	  <hr>
 	  Misc. References:<p>
-	  ["The formulation by Bahá'u'lláh..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p103-117Ch07.html#p116">p. 116</a>
+	  ["The formulation by Bahá'u'lláh..."] <i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para283">p. 216</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p103-117Ch07.html#p116">p. 116</a>
 	  </small></td>
 </tr>
 </table>
