--- a/Baha'i/Baha/KI/p259-270GlossaryAndNotes.html
+++ b/Baha'i/Baha/KI/p259-270GlossaryAndNotes.html
@@ -140,7 +140,8 @@
 </tr>
 <tr>
 	  <td>
-	  <b>Báb</b>: The Qá'im and Mihdí of Islám, and the Forerunner of Bahá'u'lláh. (Birth of the Báb: October 20, 1819; His Martyrdom: July 9, 1850).
+	  <b>Báb</b>: The Qá'im and Mihdí of Islám, and the Forerunner of Bahá'u'lláh. (Birth of the Báb: October 20, 1819<sup>*</sup>; His Martyrdom: July 9, 1850).
+	  <blockquote><small>[Festivals of the Twin Birthdays] "...will now be observed on the first and the second day following the occurrence of the eighth new moon after Naw-Rúz." <a href="../../UHJ/Messages/10July2014TotheBahaisoftheWorld.xhtml">UHJ</a></small></blockquote>
 	  </td>
 	  <td VALIGN=top><small>	  
 	  </small></td>
@@ -164,7 +165,8 @@
 </tr>
 <tr>
 	  <td>
-	  <b>Bahá'u'lláh</b>: The Founder of the Bahá'i Faith, the title being recorded in the Persian Bayán of the Báb and meaning the Glory, the Light, and the Splendor of God. (Birth of Bahá'u'lláh: November 12, 1817; His death: May 29, 1892).
+	  <b>Bahá'u'lláh</b>: The Founder of the Bahá'i Faith, the title being recorded in the Persian Bayán of the Báb and meaning the Glory, the Light, and the Splendor of God. (Birth of Bahá'u'lláh: November 12, 1817<sup>*</sup>; His death: May 29, 1892).
+	  <blockquote><small>* [Festivals of the Twin Birthdays] "...will now be observed on the first and the second day following the occurrence of the eighth new moon after Naw-Rúz." <a href="../../UHJ/Messages/10July2014TotheBahaisoftheWorld.xhtml">UHJ</a></small></blockquote>
 	  </td>
 	  <td VALIGN=top><small>	  
 	  </small></td>
