--- a/Baha'i/Baha/GL/GlossaryAndNotes.html
+++ b/Baha'i/Baha/GL/GlossaryAndNotes.html
@@ -123,7 +123,9 @@
 <tr>
 	<td><a name="para10"></a>
 	<b>'Alí Muhammad:</b>
-	<blockquote>Siyyid 'Alí Muhammad, born in Shíráz, Persia, on October 20, 1819; the "Point of the Bayan" and the "Báb" and precursor of Bahá'u'lláh</blockquote>
+	<blockquote>Siyyid 'Alí Muhammad, born in Shíráz, Persia, on October 20, 1819<sup>*</sup>; the "Point of the Bayan" and the "Báb" and precursor of Bahá'u'lláh
+		<blockquote><small>* [Festivals of the Twin Birthdays] "...will now be observed on the first and the second day following the occurrence of the eighth new moon after Naw-Rúz." <a href="../../UHJ/Messages/10July2014TotheBahaisoftheWorld.xhtml">UHJ</a></small></blockquote>
+	</blockquote>
 	</td>
 	<td VALIGN=top><small>
 	&nbsp;
@@ -763,7 +765,9 @@
 <tr>
 	<td><a name="para74"></a>
 	<b>Tihrán:</b>
-	<blockquote>The birthplace of Bahá'u'lláh (November 12, 1817) and capital of Irán.</blockquote>
+	<blockquote>The birthplace of Bahá'u'lláh (November 12, 1817)<sup>*</sup> and capital of Irán.
+	<blockquote><small>* [Festivals of the Twin Birthdays] "...will now be observed on the first and the second day following the occurrence of the eighth new moon after Naw-Rúz." <a href="../../UHJ/Messages/10July2014TotheBahaisoftheWorld.xhtml">UHJ</a></small></blockquote>
+	</blockquote>
 	</td>
 	<td VALIGN=top><small>
 	&nbsp;
